k8s/l3gl-devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-api
  namespace: devops-l3gl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-api
  template:
    metadata:
      labels:
        app: task-api
    spec:
      containers:
        - name: task-api
          image: khadijadiouf/task-api:latest
          ports:
            - containerPort: 8085
          resources:
            requests:
              cpu: "200m"
              memory: "250Mi"
            limits:
              cpu: "400m"
              memory: "500Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8085
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
  namespace: devops-l3gl
spec:
  selector:
    app: task-api
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-api-ingress
  namespace: devops-l3gl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /l3gl(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-api-service
                port:
                  number: 8085
